2010-11-22  Jan Erik Hanssen  <jhanssen@sencha.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] QWebElement::appendInside() doesn't work on head elements
        https://bugs.webkit.org/show_bug.cgi?id=49166

        Make QWebElement::appendInside() call
        Element::deprecatedCreateContextualFragment(), bypassing the check for
        the HEAD tag in the HTMLElement implementation of this function.

        * Api/qwebelement.cpp:
        (QWebElement::appendInside):
        * tests/qwebelement/tst_qwebelement.cpp:
        (tst_QWebElement::addElementToHead):

Canonical link: https://commits.webkit.org/62972@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72510 268f45cc-cd09-0410-ab3c-d52691b4dbfc