WebKit/qt/Api/qwebelement.cpp
@@ -1020,7 +1020,7 @@ void QWebElement::appendInside(const QString &markup)
         return;
 
     HTMLElement* htmlElement = static_cast<HTMLElement*>(m_element);
-    RefPtr<DocumentFragment> fragment = htmlElement->deprecatedCreateContextualFragment(markup);
+    RefPtr<DocumentFragment> fragment = htmlElement->Element::deprecatedCreateContextualFragment(markup);
 
     ExceptionCode exception = 0;
     m_element->appendChild(fragment, exception);
