WebKit/qt/tests/qwebelement/tst_qwebelement.cpp
@@ -71,6 +71,7 @@ private slots:
     void lastChildPreviousSibling();
     void hasSetFocus();
     void render();
+    void addElementToHead();
 
 private:
     QWebView* m_view;
@@ -1011,6 +1012,16 @@ void tst_QWebElement::render()
     painter4.end();
 
     QVERIFY(image3 == image4);
+}
+
+void tst_QWebElement::addElementToHead()
+{
+    m_mainFrame->setHtml("<html><head></head><body></body></html>");
+    QWebElement head = m_mainFrame->findFirstElement("head");
+    QVERIFY(!head.isNull());
+    QString append = "<script type=\"text/javascript\">var t = 0;</script>";
+    head.appendInside(append);
+    QCOMPARE(head.toInnerXml(), append);
 }
 
 QTEST_MAIN(tst_QWebElement)
